# xwidgets

./: .appveyor.yml  .clang-format  .cmake-format.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  environment.yml  readthedocs.yml  xwidgetsConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.github/workflows/: deploy-jupyterlite.yml  main.yml
docs/: Doxyfile  environment.yml
docs/source/: basic_usage.rst  compilers.rst  conf.py  custom.rst  index.rst  installation.rst  related_projects.rst  releasing.rst  usage.rst
docs/source/embed_widgets/: xleaflet_example.html  xleaflet_example.ipynb  xplot_example.html  xplot_example.ipynb
include/xwidgets/: xaccordion.hpp  xall.hpp  xaudio.hpp  xbinary.hpp  xboolean.hpp  xbox.hpp  xbutton.hpp  xcheckbox.hpp  xcolor.hpp  xcolor_picker.hpp  xcommon.hpp  xcontroller.hpp  xdescription_style.hpp  xdropdown.hpp  xeither.hpp  xfactory.hpp  xholder.hpp  xholder_id.hpp  xhtml.hpp  ximage.hpp  xjson.hpp  xlabel.hpp  xlayout.hpp  xlink.hpp  xmaker.hpp  xmaterialize.hpp  xmedia.hpp  xmixin_description.hpp  xmixin_numeric.hpp  xmock_interpreter.hpp  xnumber.hpp  xnumber_bounded.hpp  xnumber_impl.hpp  xnumeral.hpp  xobject.hpp  xobject.hpp.orig  xoutput.hpp  xpassword.hpp  xplay.hpp  xprecompiled.hpp  (+28 more)
include/xwidgets/mixin/: xdescription.hpp  xnumeric.hpp
notebooks/: xwidget.ipynb  xwidgets.ipynb
src/: xaccordion.cpp  xaudio.cpp  xbinary.cpp  xbox.cpp  xbutton.cpp  xcheckbox.cpp  xcolor_picker.cpp  xcommon.cpp  xcontroller.cpp  xdescription_style.cpp  xdropdown.cpp  xfactory.cpp  xholder.cpp  xholder_id.cpp  xhtml.cpp  ximage.cpp  xlabel.cpp  xlayout.cpp  xlink.cpp  xmedia.cpp  xmixin_description.cpp  xnumber.cpp  xnumber_bounded.cpp  xnumeral.cpp  xobject.cpp  xoutput.cpp  xpassword.cpp  xplay.cpp  xprogress.cpp  xradiobuttons.cpp  xregistry.cpp  xselect.cpp  xselectionslider.cpp  xslider.cpp  xtab.cpp  xtarget.cpp  xtarget.hpp  xtext.cpp  xtextarea.cpp  xtogglebutton.cpp  (+6 more)
src/mixin/: xdescription.cpp
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  jupyterwidgetmodels.latest.json  main.cpp  test_widget_model.cpp  test_xholder.cpp  test_xslider.cpp  test_xwidgets.cpp
